bppackaging/src/objects/General_Configurations__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configurations used in Blackpurl app</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Home_Search_Grid_Page_Size__c</fullName>
        <label>Home Search Grid Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_System_Setting_Visited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is System Setting Visited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Trial_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Trial Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Widget_Removeable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Widget Removeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_New_Customer_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load New Customer Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_New_UI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, new UI will be reflected for selected pages</inlineHelpText>
        <label>Load New UI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_New_View_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load New View Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_List_Page_Size__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>Number of records to be displayed in related list at a time</inlineHelpText>
        <label>Related List Page Size</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>General Configurations</label>
</CustomObject>